Added web and resource server

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,3 +3,10 @@ azure:
     tenant-id: ${TENANT_ID}
     client-id: ${CLIENT_ID}
     client-secret: ${CLIENT_SECRET}
+    app-id-uri: ${APP_ID_URI}
+    application-type: web_application_and_resource_server
+    authorization-clients:
+      api:
+        authorizationGrantType: authorization_code
+        scopes:
+          - api://d21b7691-b12b-4a9a-a35e-542a0a577f78/Teams
